fix cast member loading